--- a/src/m3uParser.tool/packages.config
+++ b/src/m3uParser.tool/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommandLineArgumentsParser" version="3.0.19" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
+  <package id="Sprache" version="2.2.0" targetFramework="net47" />
 </packages>
