--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,9 @@ branches:
 skip_commits:
   files:
     - '**/*.md'
+    
+configuration:
+  - Release
 
 dotnet_csproj:
   patch: true
@@ -27,10 +30,16 @@ before_build:
 nuget:
   account_feed: true
   project_feed: true
+  
+environment:
+  GITHUB_TOKEN_CRYPTED:
+    secure: BI8CvihIl1X5UtJJ4aQn5yyO1v0rgga8iMqK9sZmm7s6qZQG+VNUKa5PDNhQrteN
+  NUGET_TOKEN_CRYPTED:
+    secure: El3Kj0SEU9/+Di2uXiCsTGlDWSjPcqXyO2drOT3XDGOp3rMdIX8zeXOBZLlOCQZw
  
 deploy:
   provider: NuGet
   api_key:
-    secure: El3Kj0SEU9/+Di2uXiCsTGlDWSjPcqXyO2drOT3XDGOp3rMdIX8zeXOBZLlOCQZw
+    secure: $(NUGET_TOKEN_CRYPTED)
   skip_symbols: false
   artifact: /.*\.nupkg/
