--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ dotnet_csproj:
   informational_version: '{version}'
 
 build:
-  verbosity: detailed
+  verbosity: normal
   publish_nuget: true
  
 before_build:
@@ -39,7 +39,6 @@ environment:
  
 deploy:
   provider: NuGet
-  api_key:
-    secure: $(NUGET_TOKEN_CRYPTED)
+  api_key: $(NUGET_TOKEN_CRYPTED)
   skip_symbols: false
   artifact: /.*\.nupkg/
